Design fixes for game admin panel on mobile

--- a/web/src/containers/AccountDetails/AccountDetails.scss
+++ b/web/src/containers/AccountDetails/AccountDetails.scss
@@ -21,7 +21,8 @@
 }
 
 .section-fields {
-  margin-left: 10rem;
+  margin-left: 2rem;
+  flex: 1;
 
   &.password {
     display: flex;
