--- a/web/src/containers/Admin/Game/Index/Index.scss
+++ b/web/src/containers/Admin/Game/Index/Index.scss
@@ -1,9 +1,12 @@
 .game-admin-index {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   column-gap: 2rem;
   row-gap: 2rem;
+  
+  @media screen and (min-width: 576px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .search-btn {
